<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.chadlwilson</groupId>
	<artifactId>cloning</artifactId>
	<packaging>bundle</packaging>
	<version>1.13.0-gocd</version>
	<name>cloning</name>
	<url>https://github.com/chadlwilson/cloning/</url>
	<description><![CDATA[
                The cloning library is a small, open source (Apache
                licensed) Java library which deep-clones objects. The
                objects do not have to implement the Cloneable
                interface. Effectively, this library can clone ANY
                Java object. It can be used i.e. in cache
                implementations, if you don't want the cached object
                to be modified or whenever you want to create a deep
                copy of an object.
        ]]></description>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Chad Wilson</name>
			<email>29788154+chadlwilson@users.noreply.github.com</email>
			<organizationUrl>https://github.com/chadlwilson</organizationUrl>
		</developer>
	</developers>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<scm>
		<connection>scm:git:https://github.com/chadlwilson/cloning.git</connection>
		<developerConnection>scm:git:https://github.com/chadlwilson/cloning.git</developerConnection>
		<url>https://github.com/chadlwilson/cloning</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/chadlwilson/cloning/issues</url>
	</issueManagement>
	<developers>
		<developer>
			<id>kostaskougios</id>
			<name>Kostas Kougios</name>
			<email>kostas.kougios@googlemail.com</email>
			<url>https://github.com/kostaskougios</url>
		</developer>
	</developers>
	<build>
		<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.4</version>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.6</version>
				<configuration>
                    <argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
					<includes>
						<include>**/Test*.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.8.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/dist.xml</descriptor>
					</descriptors>
					<descriptorRefs>
						<descriptorRef>project</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>6.0.2</version>
				<extensions>true</extensions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.4</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <ignoredVersions>.*-(alpha|beta|M)[-0-9]+</ignoredVersions>
                </configuration>
            </plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.objenesis</groupId>
			<artifactId>objenesis</artifactId>
			<version>3.5</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.1.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
